--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
+v1.1.0, 2019-04-24 -- Added command to set/reset already imported items
 v1.0.2, 2019-04-18 -- Fixed wrong string for tag name
 v1.0.0, 2019-04-18 -- Initial release.
